Text no longer jumps around when loading images. Side effect: on mobile part of picture may be partly off screen.

--- a/source/public/css/styles.css
+++ b/source/public/css/styles.css
@@ -392,7 +392,6 @@ p {
 img.aboutImage {
     float: right;
     margin: 14px 0px 14px 14px;
-    max-width: 100%;
 }
 
 a.image {
